@startuml
left to right direction

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 42
skinparam ranksep 34
skinparam dpi 180
hide circle

class Transaction {
  +id: int
  +amount: Decimal
  +merchant: str?
  +item: str?
  +dedupe_hash: str
  +auto_category_id: int?
  +final_category_id: int?
  +needs_review: bool
}

class Category {
  +id: int
  +name: str
  +description: str?
  +is_system: bool
  +is_active: bool
}

class CategoryRule {
  +id: int
  +priority: int
  +merchant_pattern: str?
  +keyword_pattern: str?
  +is_regex: bool
}

class ClassificationResult {
  +id: int
  +confidence: Decimal?
  +provider: str
  +reason: str?
  +created_at: datetime
}

class ClassificationCache {
  +id: int
  +provider: str
  +text_hash: str
  +confidence: Decimal?
  +created_at: datetime
}

Category <-- Category
Category -- CategoryRule
Transaction --> Category
Transaction -- ClassificationResult
ClassificationResult --> Category
ClassificationCache --> Category

@enduml
